# xfce-persian-calendar

./: IranianIslamicDateConverter.kt  README.fa.md  README.md  convert_events.py  events-test.c  events_data.c  events_data.h  hijri-test  hijri-test.c  hijri.c  hijri.h  install.sh  jalali.c  jalali.h  meson.build  persian-calendar.desktop.in
panel-plugin/: persian-calendar.c
